--- a/index.css
+++ b/index.css
@@ -1,60 +1,14 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 body{
-    background-color: #a8dadc;
+    background-color: #9bc1c2;
 }
 
-.card{
-    background-color: #f1faee;
-    width: 250px;
-    height: 300px;
-    border-radius: 5%;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    font-size: 1.5em;
-    font-weight: 600;
-    flex-direction: column;
-    gap: 10px;
-    text-align: center;
-    
-}
-
-#listaDePersonas{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 10px;
-}
-
-.card h3{
-    color: #1d3557;
-    margin: 0;
-}
-
-.cardPoder{
-    margin-top: 5%;
-    background-color: transparent;
-    width: 400px;
-    height: 120px;
-    border-radius: 5%;
-    border: 2px solid black;
-    padding: 2%;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    font-size: 1.5em;
-    font-weight: 600;
-  
-}
-
-.cardPoder h3{
-    color: #e63946;
-    margin: 0;
-}
-
-#usuarioExistente{
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
 
 .forms-contenedor{
     display: flex;
@@ -83,6 +37,7 @@ body{
     display: flex;
     justify-content: center;
     margin-top: 30px;
+
 }
 
 .input-radio input {
@@ -96,3 +51,116 @@ body{
     border: none;
     cursor: pointer;
 }
+
+
+.card{
+    background-color: rgba(4, 4, 85, 0.2);
+    width: 100%;
+    height: auto;
+    border: 1px solid #1d3557;
+    display: flex;
+    justify-content: center;
+    font-size: 1em;
+    flex-direction: column;
+    text-align: center;
+    margin: 5px;
+}
+.card h3{
+    color: #1d3557;
+    margin: 0;
+}
+
+.listas-contenedor{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
+    margin-top: 40px;
+}
+
+.ya-existe{
+    color: rgb(163, 18, 18);
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.titulo{
+    width: 100%;
+    height: 10%;
+    font-size: 1.5em;
+    background: #1d3557;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #9bc1c2;
+    box-shadow: 0px 0px 21px 6px rgba(29,53,87,0.75);
+-webkit-box-shadow: 0px 0px 21px 6px rgba(29,53,87,0.75);
+-moz-box-shadow: 0px 0px 21px 6px rgba(29,53,87,0.75);
+}
+
+i{
+    color: #9bc1c2;
+    font-size: 1.5em;
+}
+i:hover{
+color: #f1faee;
+transition: all 1s;
+}
+
+.texto-navbar{
+    display: flex;
+    justify-content: space-around;
+    color: #f1faee;
+    background: #1d3557;
+    letter-spacing: 2px;
+    padding: 5px;
+    align-items: center;
+ 
+}
+
+nav{
+    width: 100%;
+}
+
+/*
+#listaDePersonas{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+
+
+
+.cardPoder{
+    margin-top: 5%;
+    background-color: transparent;
+    width: 400px;
+    height: 120px;
+    border-radius: 5%;
+    border: 2px solid black;
+    padding: 2%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 1.5em;
+    font-weight: 600;
+  
+}
+
+.cardPoder h3{
+    color: #e63946;
+    margin: 0;
+}
+
+#usuarioExistente{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+*/
